--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -118,7 +118,7 @@ $font-family-sans-serif: 'Roboto', sans-serif;
 $pastel-blue    : #bbf2e5;
 
 // We use these as default colors throughout
-// $primary-color: #008CBA;
+$primary-color: #3ec9a8 ;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
