--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
-    = display_meta_tags :site => 'HYBRID MATTERs'
+    = display_meta_tags :site => 'HYBRID MATTERs', og: {image: image_path('hm_logo.png')}
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true 
     = javascript_include_tag 'application', 'data-turbolinks-track' => true 
     - if controller.controller_name == 'partners'
@@ -27,10 +27,10 @@
         .hor-container
           .row
 
-            .medium-2.columns.hide-for-small-only.social_icons
-              = link_to image_tag('icon_fb.png'), 'https://www.facebook.com/groups/437255773056631/', target: :_blank
-              = link_to image_tag('icon_twitter.png'), 'http://twitter.com/hybridmatters', target: :_blank
-              = link_to image_tag('icon_post.png'), 'mailto:info@hybridmatters.net'
+            .medium-3.columns.hide-for-small-only.social_icons
+              = link_to image_tag('icon_fb.png'), 'https://www.facebook.com/groups/437255773056631/', target: :_blank, class: :facebook_link
+              = link_to image_tag('icon_twitter.png'), 'http://twitter.com/hybridmatters', target: :_blank, class: :twitter_link
+              = link_to image_tag('icon_post.png'), 'mailto:info@hybridmatters.net', class: :maillink
               
             .medium-6.large-4.small-centered.columns
               .row
@@ -38,7 +38,7 @@
                 .small-4.columns.small-text-center= link_to 'Partners', partners_path
                 .small-4.columns.small-text-center.end= link_to 'Programme', page_path('programme')
           .row.down_arrow
-            .medium-2.columns.hide-for-small-only
+            .medium-3.columns.hide-for-small-only
               &nbsp;
               - if controller.controller_name == 'calls'
                 = image_tag 'selected_down.png'
@@ -65,12 +65,18 @@
       
     .main-container= yield
     %footer
-      .row
+      .row.contact_info
+        .row
+          .small-12.columns.text-center
+            Contact
+            %br/
+            Bioartsociety | Kaasutehtaankatu 1, 00540 Helsinki, Finland | info@hybridmatters.net
+      .row.logo_strips
         .medium-2.small-offset-1.small-8.medium-left.columns
           .row
             .small-12.columns.footer_title Nordic Cultural Event of the Year
           .row
-            .small-12.columns= link_to image_tag('logo_norden.png'), 'http://norden.org/'
+            .small-12.columns= link_to image_tag('logo_norden.png'), 'http://www.nordiskkulturfond.org/ '
         .medium-9.columns.end
           .row
             .small-12.columns.footer_title.small-text-center Partners
