--- a/app/assets/stylesheets/calls.css.scss
+++ b/app/assets/stylesheets/calls.css.scss
@@ -72,8 +72,13 @@
 
 .application {
   
+  h3 {
+    font-size: 2.063rem;
+    color: #444;
+  }
+
   .form_label {
-    font-size: 0.8rem;
+    font-size: 0.938rem;
     padding-bottom: 0.2rem;
     line-height: 1.5rem;
     color: $turq;
@@ -99,11 +104,15 @@
           padding-top: 0.8rem;
         }
         .end {
+          padding-top: 0;
           li.text {
             padding-top: 2.5rem;
             border-top: 1px solid black;
           }
         }
+      }
+      .end {
+        padding-top: 1.5rem;
       }
     }
     
@@ -120,6 +129,7 @@
     input[type=text], textarea, select {
       background-color: $formpink;
       border: none;
+      box-shadow: none;
       outline: none;
       &:outline, &:active, &:focus {
         border: none;
@@ -158,7 +168,7 @@
     }
    
     input[type=submit].application {
-    
+      width: 100%;
       border: 3px solid $turq;
       background-color: white;
       padding: 9px 25px;
