--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,10 +1,10 @@
 .page_container
   .row
-    .medium-7.columns.medium-offset-2
+    .medium-8.small-centered.columns.medium-offset-2
       %h2= @page.title
   - if @page.image?
     .row
-      .medium-7.columns.medium-offset-2= image_tag @page.image.url
+      .medium-8.small-centered.columns.medium-offset-2= image_tag @page.image.url
   .row
-    .medium-7.columns.medium-offset-2.body
+    .medium-8.small-centered.columns.medium-offset-2.body
       = raw @page.body
