javascript to display characters left

--- a/app/assets/stylesheets/calls.css.scss
+++ b/app/assets/stylesheets/calls.css.scss
@@ -115,7 +115,12 @@
         padding-top: 1.5rem;
       }
     }
-    
+    p.counter {
+      float: right;
+      font-size: 0.8rem;
+      color: #999;
+      font-style: italic;
+    }
     textarea {
       height: 135px;
     }
