--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -82,7 +82,7 @@
             .small-12.columns.footer_title.small-text-center Partners
           .row
             .small-12.columns.partners.small-text-center 
-              = link_to image_tag('logo_bioarts.png'), 'http://www.bioart.fi/', target: :_blank
+              = link_to image_tag('logo_bioarts.png'), 'http://www.bioartsociety.fi/', target: :_blank
               = link_to image_tag('logo_copenhagen_uni.png'), 'http://www.itu.dk/', target: :_blank  
               = link_to image_tag('logo_forumbox.png'), 'http://www.forumbox.fi/', target: :_blank
               = link_to image_tag('logo_greenland.png'), 'http://kunsthallgrenland.no/', target: :_blank        
