--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
             .medium-3.columns.hide-for-small-only.social_icons
               = link_to image_tag('icon_fb.png', onmouseover: "this.src='#{image_path('icon_fb_hover.png')}'", onmouseout: "this.src='#{image_path('icon_fb.png')}'"), 'https://www.facebook.com/groups/437255773056631/', target: :_blank, class: :facebook_link
               = link_to image_tag('icon_twitter.png', onmouseover: "this.src='#{image_path('icon_twitter_hover.png')}'", onmouseout: "this.src='#{image_path('icon_twitter.png')}'"), 'http://twitter.com/hybridmatters', target: :_blank, class: :twitter_link
-              = link_to image_tag('icon_post.png', onmouseover: "this.src='#{image_path('icon_post_hover.png')}'", onmouseout: "this.src='#{image_path('icon_post.png')}'"), 'mailto:info@hybridmatters.net', class: :maillink
+              = link_to image_tag('icon_post.png', onmouseover: "this.src='#{image_path('icon_post_hover.png')}'", onmouseout: "this.src='#{image_path('icon_post.png')}'"), 'mailto:info@bioartsociety.fi, class: :maillink
               
             .medium-6.large-4.small-centered.columns
               .row
@@ -70,7 +70,7 @@
           .small-12.columns.text-center
             Contact
             %br/
-            Bioartsociety | Kaasutehtaankatu 1, 00540 Helsinki, Finland | info@hybridmatters.net
+            Bioartsociety | Kaasutehtaankatu 1, 00540 Helsinki, Finland | info@bioartsociety.fi
       .row.logo_strips
         .medium-2.small-offset-1.small-8.medium-left.columns
           .row
