--- a/app/views/submission_mailer/submission_received.html.haml
+++ b/app/views/submission_mailer/submission_received.html.haml
@@ -7,4 +7,4 @@
       = @user.name + ","
     %p Thank you very much for your application.
     %p We will inform as soon as possible about the selection. 
-    %p If you have any questions please write to info@hybridmatters.net
+    %p If you have any questions please write to info@bioartsociety.fi
