--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -27,6 +27,7 @@
           %li= link_to 'Activities', admin_activities_path
           %li= link_to 'Static pages', admin_pages_path
           %li= link_to 'Open calls', admin_calls_path
+          %li= link_to 'Header images', admin_backgrounds_path
     - else
       = link_to '[sign in]', new_user_session_path                
     = yield
