--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,18 +1,33 @@
-.row
-  .large-10.columns.large-offset-1
-    %h1= @post.title
-- unless @post.photos.empty?
-  .row
-    .large-10.columns.large-offset-1.image_carousel
-      - @post.photos.each do |i|
-        .slide= image_tag i.image.url
-.row
-  .large-10.columns.large-offset-1
-    = raw @post.body
+.post_single_container
+  .post
+    .row
 
-- if can? :edit, @post
-  .row
-    .small-12.columns= link_to 'Edit post', edit_admin_post_path(@post), class: [:button, :tiny, :secondary]
+      .small-10.medium-8.columns.medium-offset-2
+        .row
+          .small-2.columns
+            - if @post.user.partner.nil?
+              = image_tag 'hm_logo.png'
+            - else
+              = image_tag @post.user.partner.hmlogo.url
+          .small-10.columns.post_info.end
+            .blue_heading Activity category
+            .title= @post.title
+            .date= l @post.published_at, format: :long
+
+    - unless @post.photos.empty?
+      .row
+        .small-10.medium-8.columns.medium-offset-2
+          .image_carousel{style: @post.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
+            - @post.photos.each do |photo|
+              .slide
+                = image_tag photo.image.url(:standard)
+                .thumb= image_tag photo.image.url(:thumb)
+    .row
+      .small-10.medium-8.columns.medium-offset-2
+        .body= raw sanitize(@post.body, tags: %w{bold b strong u underline i italic em})
+    - if can? :edit, @post
+      .row
+        .small-12.columns= link_to 'Edit post', edit_admin_post_path(@post), class: [:button, :tiny, :secondary]
     
 - if @post.photos.size > 1
   = content_for :jquery do
@@ -20,6 +35,11 @@
       $('.image_carousel').slick({infinite: true,
         arrows: false,
         slide: '.slide',
+        adaptiveHeight: true,
+        dots: true,
+        customPaging: function(slick,index) {
+           return slick.$slides.eq(index).find('.thumb').html();
+        },
         variableWidth: false,
         autoplay: true,
         autoplaySpeed: 2400,
