--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -28,6 +28,7 @@
           %li= link_to 'Static pages', admin_pages_path
           %li= link_to 'Open calls', admin_calls_path
           %li= link_to 'Header images', admin_backgrounds_path
+          %li= link_to 'Post categories', admin_postcategories_path
     - else
       = link_to '[sign in]', new_user_session_path                
     = yield
