--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -14,6 +14,18 @@
 .post {
   padding: 3.75rem 0;
   
+  .post_paginator {
+    margin-top: 1rem;
+    float: left;
+    border: 3px solid #333;
+    color: #333;
+    
+    letter-spacing: 0.3rem;
+    a { color: #333; &:hover { color: $turq; } }
+    padding: 0.3rem;
+    text-transform: uppercase;
+    font-size: 1rem;
+  }
   border-bottom: 2px solid black;
   &.last {
     border-bottom: none;
