--- a/app/views/admin/posts/edit.html.haml
+++ b/app/views/admin/posts/edit.html.haml
@@ -1,7 +1,6 @@
-%h1 Editing post
+.row
+  .small-12.columns
+    %h1 Editing post
 
 = render 'form'
 
-= link_to 'Show', @post
-\|
-= link_to 'Back', posts_path
