--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -91,19 +91,25 @@
     - unless @sticky.empty?
       #sticky_blue_box
         .heading.ui-draggable-handle
-          IMPORTANT
-          %span.white STUFF
+          ANNOUNCEMENTS
         
         - @sticky.each do |post|
-          .title_box.text-center
+          .title_box.text-center{style: "padding: #{3.25 - @sticky.size }rem 0;"}
             .title= post.title
-            .date= l post.published_at, format: :short
-          .blurb
-            = post.short_abstract.blank? ? truncate_html(post.body, length: 200) : post.short_abstract
+            .date= post.published_at.strftime("%d %b %Y")
+          .blurb{style: "padding: #{2.75 - @sticky.size }rem 0;"}
+            = post.short_abstract.blank? ? truncate_html(strip_tags(post.body), length: 200) : post.short_abstract
             = link_to '>>>', post
       = content_for :jquery do
         :plain  
           $('#sticky_blue_box').dialog({draggable: false, resizable: false, position: { my: "right-40 bottom", at: "right bottom-20", of: '.hor-container'}}).parent().draggable();
+          $('.ui-dialog').draggable( "option", "containment", 'html');
+          $('#sticky_blue_box .title_box').mouseover(function() {
+            $('#sticky_blue_box .blurb').css('display', 'none');
+            $('#sticky_blue_box .title_box').css('display', 'block');
+            $(this).toggle();
+            $(this).next('.blurb').toggle();
+          });
 
     %footer
       .row.contact_info
