--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -104,11 +104,15 @@
         :plain  
           $('#sticky_blue_box').dialog({draggable: false, resizable: false, position: { my: "right-40 bottom", at: "right bottom-20", of: '.hor-container'}}).parent().draggable();
           $('.ui-dialog').draggable( "option", "containment", 'html');
-          $('#sticky_blue_box .title_box').mouseover(function() {
+          $('#sticky_blue_box .title_box').mouseenter(function() {
             $('#sticky_blue_box .blurb').css('display', 'none');
             $('#sticky_blue_box .title_box').css('display', 'block');
             $(this).toggle();
             $(this).next('.blurb').toggle();
+          });
+          $('#sticky_blue_box').mouseleave(function() {
+            $('#sticky_blue_box .blurb').css('display', 'none');
+            $('#sticky_blue_box .title_box').css('display', 'block');
           });
 
     %footer
@@ -117,7 +121,7 @@
           .small-12.columns.text-center
             Contact
             %br/
-            Bioartsociety | Kaasutehtaankatu 1, 00540 Helsinki, Finland | info@bioartsociety.fi
+            Bioartsociety | Kaasutehtaankatu 1, 00540 Helsinki, Finland | info@hybridmatters.net
       .row.logo_strips
         .medium-2.small-offset-1.small-8.medium-left.columns
           .row
