post ccontrollers view

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -200,6 +200,7 @@ footer {
   background-color: $darkerturq;
   color: black;
   cursor: pointer;
+  overflow: hidden;
   font-family: Roboto, sans-serif;
   .heading {
    cursor: move;
