--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -114,6 +114,7 @@
             $('#sticky_blue_box .blurb').css('display', 'none');
             $('#sticky_blue_box .title_box').css('display', 'block');
           });
+          $('.blurb').css('height', $('.blurb').prev('.title_box').css('height'));
 
     %footer
       .row.contact_info
