--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -2,6 +2,12 @@
 
 .post_container {
   margin: 0;
+  
+  .blue_category_bar {
+    background-color: $turq;
+    color: white;
+    padding: 0.8rem;
+  }
 }
 
 .post_single_container {
@@ -77,6 +83,12 @@
       line-height: 1.5rem;
       text-transform: uppercase;
       font-weight: 300;
+      a { 
+        color: $turq;
+        &:hover {
+          color: $darkerturq;
+        }
+      }
     }
     .title {
       font-size: 2.063rem;
